<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SwEng2013QuizApp</string>
    <string name="action_settings">Settings</string>

    <!-- MainActivity -->
    <string name="title_activity_main">MainActivity</string>
    <string name="show_random_question">Show a random question</string>
    <string name="submit_question">Submit a quiz question</string>
    <string name="tequila_logout">Log out</string>
    <string name="offline_mode">Offline mode</string>
    <string name="clear_cache">Clear the cache</string>
    <string name="dialog_clear_cache">You\'ll lose all your cached questions, including those waiting for submission!</string>
    <string name="dialog_clear_cache_title">Clear the cache?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="cache_cleared">Cache cleared.</string>

    <!-- EditQuestionActivity -->
    <string name="title_activity_edit_question">EditQuestionActivity</string>
    <string name="type_in_question">Type in the question\'s text body</string>
    <string name="type_in_tags">Type in the question\'s tags</string>
    <string name="type_in_answer">Type in the answer</string>
    <string name="button_submit">Submit</string>
    <string name="button_clear_answer">Clear</string>
    <string name="failed_to_send_question">Could not upload the question to the server.</string>
    <string name="question_cached">Question cached.</string>

    <!-- ShowQuestionsActivity -->
    <string name="title_activity_show_questions">Let\'s take a quiz!</string>
    <string name="button_next">Next question</string>
    <string name="failed_to_get_question">There was an error retrieving the question.</string>
    <string name="no_cached_question">There is no question in cache!</string>
    <string name="failed_to_cache_question">An error occurred while caching the question!</string>
    <string name="text_retry">Retry</string>
    <string name="text_abort">Abort</string>
    <string name="no_more_questions_to_show">There are no more questions matching your query</string>

    <!-- Unicode characters -->
    <string name="wrong_answer">\u2718</string>
    <string name="correct_answer">\u2714</string>
    <string name="button_add_answer">\u002B</string>
    <string name="remove_answer">\u002D</string>

    <!-- AuthenticationActivity -->
    <string name="title_activity_authentication">Sign in</string>
    <string name="GASPAR_username">GASPAR Username</string>
    <string name="GASPAR_password">GASPAR Password</string>
    <string name="tequila_login">Log in using Tequila</string>
    <string name="failed_to_log_in">Network error. Impossible to log in.</string>
    <string name="not_logged_in">Please log in !</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="login_short">Log in</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="error_field_required">This field is required</string>

    <!-- Offline mode -->
    <string name="synchronization_success">Your questions have been successfully submitted.</string>
    <string name="synchronization_failure">Impossible to submit your offline questions!</string>
    <string name="broken_database">Your cache is corrupted. Please clear it !</string>
    <string name="now_offline">You\'re now offline.</string>
    <string name="now_online">You\'re now online.</string>
	
    <!--  SearchQuestionActivity -->
    <string name="search_question">"Search"</string>
    <string name="type_in_search_query">"Type in the search query"</string>
    <string name="search_button">"Search"</string>
    <string name="title_activity_search">Search for a question</string>

</resources>
