<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?android:attr/listPreferredItemHeight" >

    <Button
        android:id="@+id/button_check_answer"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:onClick="checkRightAnswer"
        android:text="@string/wrong_answer" />

    <EditText
        android:id="@+id/edit_answer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/type_in_answer"
        android:maxLines="1"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/button_remove_answer"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:onClick="removeAnswer"
        android:text="@string/remove_answer" />

</LinearLayout>