<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Button
        android:id="@+id/show_random_question_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_question_button"
        android:text="@string/show_random_question"
        android:onClick="showQuestion"
        android:enabled="false" />
    
    <Button
        android:id="@id/edit_question_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/submit_question"
        android:onClick="submitQuestion"
        android:enabled="false" />
    
    <Button 
        android:id="@+id/tequila_login_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_question_button"
        android:text="@string/tequila_login"
        android:onClick="tequilaLogin"
        android:enabled="true" />
    
    <CheckBox
        android:id="@+id/checkbox_offline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="offlineMode"
        android:text="@string/offline_mode"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:enabled="false" />

</RelativeLayout>
