<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?android:attr/listPreferredItemHeight" >

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/wrong_answer"
            android:focusable="false" >
        </Button>

        <EditText
            android:id="@+id/new_answer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/type_in_answer"
            android:maxLines="1"
            android:focusable="true"
            android:scrollbars="vertical" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/remove_answer"
            android:focusable="false" >
        </Button>

</LinearLayout>