<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" >

    <ProgressBar 
        android:id="@+id/progressbar_authentication"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	
	    <EditText
	        android:id="@+id/user_name"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/GASPAR_username"
	        android:maxLines="1" />
	
	    <EditText
	        android:id="@+id/user_password"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/GASPAR_password"
	        android:inputType="textPassword"
	        android:maxLines="1" />
	
	    <Button
	        android:id="@+id/button_login"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:onClick="onClickLogin"
	        android:text="@string/tequila_login" />
	</LinearLayout>
	
</merge>